--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ node_modules
 chunks
 includes/blocks
 includes/json
-/vendor
+vendor
 
 # Directories/files that may appear in your environment
 .DS_Store
