--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router": "^7.1.1",
     "react-router-dom": "^7.1.1",
     "react-select": "^5.9.0",
+    "slugify": "^1.6.6",
     "utility-types": "^3.11.0",
     "validator": "^13.12.0"
   },
