--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@wordpress/scripts": "^30.7.0",
     "antd": "^5.22.6",
     "classnames": "^2.5.1",
+    "date-fns-tz": "^3.2.0",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
     "react-dom": "^18.3.1",
