--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@wordpress/prettier-config": "^4.14.0",
     "@wordpress/scripts": "^30.7.0",
     "antd": "^5.22.6",
+    "autoprefixer": "^10.4.21",
     "classnames": "^2.5.1",
     "date-fns-tz": "^3.2.0",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
+    "postcss": "^8.5.3",
     "react-dom": "^18.3.1",
     "react-router": "^7.1.1",
     "react-router-dom": "^7.1.1",
@@ -56,6 +58,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@types/lodash": "^4.17.14"
+    "@types/lodash": "^4.17.14",
+    "tailwindcss": "^3.4.17"
   }
 }
