--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "lodash": "^4.17.21",
     "postcss": "^8.5.3",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router": "^7.1.1",
     "react-router-dom": "^7.1.1",
-    "react-select": "^5.9.0",
+    "react-select": "^5.10.1",
     "slugify": "^1.6.6",
     "utility-types": "^3.11.0",
     "validator": "^13.12.0"
