--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,6 @@
         ],
         "format": "phpcbf --standard=phpcs.xml.dist --report-summary --report-source",
         "lint": "phpcs --standard=phpcs.xml.dist",
-        "test": "phpunit"
+         "test": "phpunit --testdox"
     }
 }
