--- a/.github/workflows/wordpress-phpunit.yml
+++ b/.github/workflows/wordpress-phpunit.yml
@@ -54,9 +54,11 @@ jobs:
           coverage: none
           tools: composer
         
-      - name: Update Composer dependencies
-        run: composer update --no-progress --no-ansi --no-interaction
-        
+      - name: Remove incompatible dependencies for PHP < 8.1
+        if: matrix.php < 8.1
+        run: |
+          composer remove --dev spatie/phpunit-watcher --no-update --no-interaction
+
       - name: Install Composer dependencies
         uses: ramsey/composer-install@v2
         with:
