--- a/.github/workflows/wordpress-phpunit.yml
+++ b/.github/workflows/wordpress-phpunit.yml
@@ -59,6 +59,9 @@ jobs:
         run: |
           composer remove --dev spatie/phpunit-watcher --no-update --no-interaction
 
+      - name: Update Composer dependencies
+        run: composer update --no-progress --no-ansi --no-interaction
+
       - name: Install Composer dependencies
         uses: ramsey/composer-install@v2
         with:
