Add Jest testing setup and update dependencies
- Created jest.setup.js to include '@testing-library/jest-dom'.
- Updated package.json and package-lock.json to add testing libraries: @testing-library/react, @testing-library/user-event, and their type definitions.
- Configured Jest in package.json with test environment and module name mapping.
- Added initial unit tests for the Header component in src/__tests__/components/header/Header.test.tsx.
- Updated tsconfig.json to include Jest types for TypeScript support.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,7 @@
 		"baseUrl": "src",
 		"skipLibCheck": true,
 		"strictNullChecks": true,
-		"types": [],
+		"types": ["jest", "@testing-library/jest-dom"],
 		"paths": {
 			"@quillbooking/navigation": ["navigation"],
 			"@quillbooking/config": ["config"],
