--- a/.github/workflows/wordpress-phpunit.yml
+++ b/.github/workflows/wordpress-phpunit.yml
@@ -1,15 +1,15 @@
-name: WordPress Tests
+name: WordPress and React Tests
 
 on:
   push:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
-  # Allow manual trigger of the workflow
+
   workflow_dispatch:
 
 jobs:
-  test:
+  php-test:
     name: WP ${{ matrix.wordpress }} on PHP ${{ matrix.php }}
     runs-on: ubuntu-latest
     strategy:
@@ -59,9 +59,6 @@ jobs:
         run: |
           composer remove --dev spatie/phpunit-watcher --no-update --no-interaction
 
-      - name: Update Composer dependencies
-        run: composer update --no-progress --no-ansi --no-interaction
-
       - name: Install Composer dependencies
         uses: ramsey/composer-install@v2
         with:
@@ -73,4 +70,23 @@ jobs:
 
       - name: Run PHPUnit tests
         run: |
-          composer test 
+          composer test
+          
+  react-test:
+    name: React Tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+        
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+          cache: 'npm'
+          
+      - name: Install dependencies
+        run: npm ci
+        
+      - name: Run React tests
+        run: npm test 
