Update PHPUnit configuration to include test directory prefix and enhance bootstrap process for WordPress testing environment

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -9,7 +9,7 @@
 	>
 	<testsuites>
 		<testsuite name="default">
-			<directory suffix=".php">./phpunit/</directory>
+			<directory prefix="test-" suffix=".php">./phpunit/</directory>
 		</testsuite>
 	</testsuites>
 	<groups>
