Update .env.example to include additional database configuration variables for WordPress testing environment

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 WP_TESTS_DB_USER=root
-WP_TESTS_DB_PASS=StrongP@ssw0rd!
+WP_TESTS_DB_PASSWORD=StrongP@ssw0rd!
+WP_TESTS_DB_NAME=quillbooking_test
+WP_TESTS_DB_HOST=localhost
+WP_TESTS_DIR=/tmp/wordpress-tests-lib
