--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,11 @@
         "php": ">=7.4",
         "composer/installers": "~1.0"
     },
+    "autoload-dev": {
+        "psr-4": {
+            "QuillBooking\\Tests\\": "tests/"
+        }
+    },
     "config": {
         "process-timeout": 0,
         "allow-plugins": {
