--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "rtlcss-webpack-plugin": "^4.0.7",
     "tailwindcss": "^3.4.17",
     "ts-jest": "^29.1.1"
   }
