--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -8,13 +8,8 @@
 	convertWarningsToExceptions="true"
 	>
 	<testsuites>
-		<testsuite name="default">
-			<directory prefix="test-" suffix=".php">./tests/</directory>
+		<testsuite name="unit">
+			<directory prefix="test-" suffix=".php">./tests</directory>
 		</testsuite>
 	</testsuites>
-	<groups>
-		<exclude>
-			<group>ms-required</group>
-		</exclude>
-	</groups>
-</phpunit>
+</phpunit> 
