--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -9,7 +9,10 @@
 	>
 	<testsuites>
 		<testsuite name="unit">
-			<directory prefix="test-" suffix=".php">./tests</directory>
+			<directory prefix="test-" suffix=".php">./tests/unit</directory>
+		</testsuite>
+		<testsuite name="integration">
+			<directory prefix="test-" suffix=".php">./tests/integration</directory>
 		</testsuite>
 	</testsuites>
 </phpunit> 
