--- a/.github/workflows/wordpress-phpunit.yml
+++ b/.github/workflows/wordpress-phpunit.yml
@@ -89,3 +89,68 @@ jobs:
         
       - name: Run React tests
         run: npm test 
+        
+  integration-test:
+    name: Integration Tests
+    runs-on: ubuntu-latest
+    needs: [php-test, react-test]
+    services:
+      mysql:
+        image: mysql:5.7
+        env:
+          MYSQL_ROOT_PASSWORD: password
+          MYSQL_DATABASE: wordpress
+        ports:
+          - 3306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+        
+      wordpress:
+        image: wordpress:latest
+        env:
+          WORDPRESS_DB_HOST: 127.0.0.1
+          WORDPRESS_DB_USER: root
+          WORDPRESS_DB_PASSWORD: password
+          WORDPRESS_DB_NAME: wordpress
+          WORDPRESS_DEBUG: 1
+        ports:
+          - 8080:80
+        options: --health-cmd="curl -f http://localhost:80/" --health-interval=10s --health-timeout=5s --health-retries=3
+        
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+        
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.1'
+          extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, mysql, mysqli, pdo_mysql, bcmath, soap, intl, gd, exif, iconv, imagick
+          coverage: none
+          tools: composer
+          
+      - name: Install WordPress CLI
+        run: |
+          curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
+          chmod +x wp-cli.phar
+          sudo mv wp-cli.phar /usr/local/bin/wp
+          
+      - name: Install dependencies
+        run: composer install --no-ansi --no-interaction
+        
+      - name: Install plugin into WordPress
+        run: |
+          # Wait for WordPress to be ready
+          sleep 10
+          
+          # Create plugin directory
+          mkdir -p /tmp/wordpress/wp-content/plugins/quill-booking
+          
+          # Copy plugin files
+          cp -r ./* /tmp/wordpress/wp-content/plugins/quill-booking/
+          
+          # Install and activate plugin using WP-CLI
+          wp plugin activate quill-booking --path=/var/www/html --allow-root
+        
+      - name: Run integration tests
+        run: |
+          composer run integration-test 
