--- a/package.json
+++ b/package.json
@@ -15,6 +15,19 @@
     "@lexical/selection": "^0.30.0",
     "@lexical/table": "^0.30.0",
     "@mui/material": "^6.4.8",
+    "@udecode/cn": "^47.3.1",
+    "@udecode/plate": "^47.3.1",
+    "@udecode/plate-basic-elements": "^47.0.0",
+    "@udecode/plate-basic-marks": "^46.0.5",
+    "@udecode/plate-block-quote": "^44.0.0",
+    "@udecode/plate-comments": "^45.0.0",
+    "@udecode/plate-common": "^42.0.0",
+    "@udecode/plate-core": "^47.3.1",
+    "@udecode/plate-heading": "^44.0.0",
+    "@udecode/plate-serializer-html": "^21.5.1",
+    "@udecode/plate-ui": "^35.0.0",
+    "@udecode/plate-ui-dnd": "^21.5.1",
+    "@udecode/plate-ui-toolbar": "^22.0.0",
     "@wordpress/api-fetch": "^7.14.0",
     "@wordpress/components": "^29.0.0",
     "@wordpress/core-data": "^7.14.0",
@@ -38,6 +51,9 @@
     "react-router": "^7.1.1",
     "react-router-dom": "^7.1.1",
     "react-select": "^5.10.1",
+    "slate": "^0.114.0",
+    "slate-history": "^0.113.1",
+    "slate-react": "^0.114.2",
     "slugify": "^1.6.6",
     "utility-types": "^3.11.0",
     "validator": "^13.12.0"
@@ -85,6 +101,8 @@
     "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.14",
+    "@types/slate": "^0.47.16",
+    "@types/slate-react": "^0.50.1",
     "@types/testing-library__jest-dom": "^5.14.9",
     "@wordpress/jest-preset-default": "^12.22.0",
     "@wordpress/scripts": "^30.15.0",
