--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,8 +11,29 @@ commands:
           command: |
             sudo apt-get update
             sudo apt-get install -y libpng-dev libjpeg-dev libfreetype6-dev
-            sudo docker-php-ext-configure gd --with-freetype --with-jpeg
-            sudo docker-php-ext-install -j$(nproc) gd exif mysqli pdo_mysql zip bcmath soap intl
+            
+            # Check which extensions are already installed
+            INSTALLED_EXTENSIONS=$(php -m | tr '[:upper:]' '[:lower:]')
+            
+            # Configure GD if not already installed
+            if ! echo "$INSTALLED_EXTENSIONS" | grep -q "^gd$"; then
+              sudo docker-php-ext-configure gd --with-freetype --with-jpeg
+            fi
+            
+            # Install extensions only if they're not already installed
+            EXTENSIONS_TO_INSTALL=""
+            for ext in gd exif mysqli pdo_mysql zip bcmath soap intl; do
+              if ! echo "$INSTALLED_EXTENSIONS" | grep -q "^$ext$"; then
+                EXTENSIONS_TO_INSTALL="$EXTENSIONS_TO_INSTALL $ext"
+              fi
+            done
+            
+            # Only run the install command if there are extensions to install
+            if [ ! -z "$EXTENSIONS_TO_INSTALL" ]; then
+              sudo docker-php-ext-install -j$(nproc) $EXTENSIONS_TO_INSTALL
+            else
+              echo "All required PHP extensions are already installed."
+            fi
 
 jobs:
   php-test:
