--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -104,7 +104,9 @@ jobs:
       - run:
           name: Install PHP and extensions
           command: |
-            sudo apt-get install -y php php-mysql php-gd php-xml php-mbstring php-zip php-curl php-intl
+            sudo add-apt-repository ppa:ondrej/php -y
+            sudo apt-get update
+            sudo apt-get install -y php7.4 php7.4-mysql php7.4-gd php7.4-xml php7.4-mbstring php7.4-zip php7.4-curl php7.4-intl
       - run:
           name: Install WordPress CLI
           command: |
@@ -132,7 +134,9 @@ jobs:
             # Install Composer
             cd $CIRCLE_WORKING_DIRECTORY
             sudo apt-get install -y composer
-            composer install --no-ansi --no-interaction
+            
+            # Install dependencies
+            composer update --no-progress --no-ansi --no-interaction
       - run:
           name: Install and activate plugin
           command: |
