--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -137,6 +137,9 @@ jobs:
             php composer-setup.php --version=2.2.18
             php -r "unlink('composer-setup.php');"
             sudo mv composer.phar /usr/local/bin/composer
+
+            # Remove incompatible dependencies for PHP 7.4
+            composer remove --dev spatie/phpunit-watcher --no-update --no-interaction
             
             # Install dependencies
             composer update --no-progress --no-ansi --no-interaction
