--- a/dependencies/composer.json
+++ b/dependencies/composer.json
@@ -24,7 +24,7 @@
     "repositories": [
         {
             "type": "vcs",
-            "url": "git@github.com:quillforms/wpeloquent.git"
+            "url": "https://github.com/quillforms/wpeloquent.git"
         }
     ]
 }
