--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -106,7 +106,7 @@ jobs:
           command: |
             sudo add-apt-repository ppa:ondrej/php -y
             sudo apt-get update
-            sudo apt-get install -y php7.4 php7.4-mysql php7.4-gd php7.4-xml php7.4-mbstring php7.4-zip php7.4-curl php7.4-intl
+            sudo apt-get install -y php7.4 php7.4-mysql php7.4-gd php7.4-xml php7.4-mbstring php7.4-zip php7.4-curl php7.4-intl subversion
       - run:
           name: Install WordPress CLI
           command: |
