--- a/.github/workflows/wordpress-phpunit.yml
+++ b/.github/workflows/wordpress-phpunit.yml
@@ -142,14 +142,24 @@ jobs:
           # Wait for WordPress to be ready
           sleep 10
           
+          # Create WordPress directory
+          mkdir -p /tmp/wordpress
+          cd /tmp/wordpress
+          
+          # Download and configure WordPress
+          wp core download --allow-root
+          wp config create --dbname=wordpress --dbuser=root --dbpass=password --dbhost=127.0.0.1 --allow-root
+          wp core install --url=localhost --title="Test Site" --admin_user=admin --admin_password=password --admin_email=test@example.com --skip-email --allow-root
+          
           # Create plugin directory
           mkdir -p /tmp/wordpress/wp-content/plugins/quill-booking
           
           # Copy plugin files
-          cp -r ./* /tmp/wordpress/wp-content/plugins/quill-booking/
+          cp -r ${GITHUB_WORKSPACE}/* /tmp/wordpress/wp-content/plugins/quill-booking/
           
           # Install and activate plugin using WP-CLI
-          wp plugin activate quill-booking --path=/tmp/wordpress --allow-root
+          cd /tmp/wordpress
+          wp plugin activate quill-booking --allow-root
         
       - name: Run integration tests
         run: |
