chore: Update integration test command in WordPress PHPUnit workflow to use 'composer run test:integration'

--- a/.github/workflows/wordpress-phpunit.yml
+++ b/.github/workflows/wordpress-phpunit.yml
@@ -163,4 +163,4 @@ jobs:
         
       - name: Run integration tests
         run: |
-          composer run integration-test 
+          composer run test:integration
