--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "phpunit/phpunit": "^9.6",
         "yoast/phpunit-polyfills": "^1.0",
         "spatie/phpunit-watcher": "^1.24",
-        "php-mock/php-mock-phpunit": "^2.13"
+        "php-mock/php-mock-phpunit": "^2.13",
+        "mockery/mockery": "^1.6"
     },
     "require": {
         "php": ">=7.4",
