--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "history": "^5.3.0",
     "lexical": "^0.30.0",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.509.0",
     "postcss": "^8.5.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
@@ -51,6 +52,7 @@
     "react-router": "^7.1.1",
     "react-router-dom": "^7.1.1",
     "react-select": "^5.10.1",
+    "recharts": "^2.15.3",
     "slate": "^0.114.0",
     "slate-history": "^0.113.1",
     "slate-react": "^0.114.2",
