chore: Enable format on save in VSCode settings for improved code consistency

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "editor.codeActionsOnSave": {},
-  "editor.formatOnSave": false,
+  "editor.formatOnSave": true,
   "php.version": "8.2",
   "saveAndRun": {
     "commands": [
