--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-multi-email": "^1.0.25",
+    "react-phone-input-2": "^2.15.1",
     "react-router": "^7.1.1",
     "react-router-dom": "^7.1.1",
     "react-select": "^5.10.1",
