--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^6.4.8",
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.3.0",
+    "@types/tinycolor2": "^1.4.6",
     "@udecode/cn": "^47.3.1",
     "@udecode/plate": "^47.3.1",
     "@udecode/plate-basic-elements": "^47.0.0",
@@ -61,6 +62,7 @@
     "slate-history": "^0.113.1",
     "slate-react": "^0.114.2",
     "slugify": "^1.6.6",
+    "tinycolor2": "^1.6.0",
     "utility-types": "^3.11.0",
     "validator": "^13.12.0"
   },
