--- a/dependencies/composer.json
+++ b/dependencies/composer.json
@@ -1,30 +1,29 @@
 {
-    "name": "quillbooking/quillbooking-deps",
-    "require": {
-        "composer/installers": "~1.0",
-        "quillforms/wpeloquent": "^1.0.2",
-        "google/apiclient": "^2.16.0",
-        "sabre/dav": "~4.6.0",
-        "sabre/vobject": "~4.5",
-        "stripe/stripe-php": "^16.4"
-    },
-    "scripts": {
-        "pre-autoload-dump": "Google\\Task\\Composer::cleanup"
-    },
-    "config": {
-        "allow-plugins": {
-            "composer/installers": true
-        }
-    },
-    "extra": {
-        "google/apiclient-services": [
-            "Calendar"
-        ]
-    },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/quillforms/wpeloquent.git"
-        }
-    ]
+	"name": "quillbooking/quillbooking-deps",
+	"require": {
+		"composer/installers": "~1.0",
+		"quillforms/wpeloquent": "^1.0.2",
+		"google/apiclient": "^2.16.0",
+		"sabre/dav": "~4.6.0",
+		"sabre/vobject": "~4.5"
+	},
+	"scripts": {
+		"pre-autoload-dump": "Google\\Task\\Composer::cleanup"
+	},
+	"config": {
+		"allow-plugins": {
+			"composer/installers": true
+		}
+	},
+	"extra": {
+		"google/apiclient-services": [
+			"Calendar"
+		]
+	},
+	"repositories": [
+		{
+			"type": "vcs",
+			"url": "https://github.com/quillforms/wpeloquent.git"
+		}
+	]
 }
