--- a/dependencies/composer.json
+++ b/dependencies/composer.json
@@ -2,10 +2,7 @@
     "name": "quillbooking/quillbooking-deps",
     "require": {
         "composer/installers": "~1.0",
-        "quillforms/wpeloquent": "^1.0.2",
-        "sabre/dav": "~4.6.0",
-        "sabre/vobject": "~4.5",
-        "stripe/stripe-php": "^16.4"
+        "quillforms/wpeloquent": "^1.0.2"
     },
     "config": {
         "allow-plugins": {
