--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   "scripts": {
     "dev": "npm run dev-client && npm run dev-config",
     "build": "npm run build-client && npm run build-config",
-    "dev-client": "wp-scripts start src/client/index.tsx --output-path=build/client --hot",
+    "dev-client": "wp-scripts start src/client/index.tsx --output-path=build/client",
     "build-client": "wp-scripts build src/client/index.tsx --output-path=build/client",
     "dev-config": "wp-scripts start src/config/index.ts --output-path=build/config",
     "build-config": "wp-scripts build src/config/index.ts --output-path=build/config",
