--- a/dependencies/composer.json
+++ b/dependencies/composer.json
@@ -1,19 +1,21 @@
 {
-    "name": "quillbooking/quillbooking-deps",
+    "name": "quillcrm/quillcrm-deps",
     "require": {
         "quillforms/wpeloquent": "^1.0.2",
         "nesbot/carbon": "^2.0",
-        "carbonphp/carbon-doctrine-types": "^2.1"
+        "carbonphp/carbon-doctrine-types": "^2.1",
+        "league/csv": "9.8.0"  
     },
     "config": {
         "allow-plugins": {
             "composer/installers": true
         }
     },
+    "prefer-stable": true,
     "repositories": [
         {
             "type": "vcs",
-            "url": "https://github.com/quillforms/wpeloquent.git"
+            "url": "git@github.com:quillforms/wpeloquent.git"
         }
     ]
 }
